--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 }
 .grid {
   display: grid;
-  gap: 8px 7px;
+  height: 2vh;
+  width: 2vw;
   margin-left: 2vw;
   grid-template-columns: auto auto auto auto;
 }
